# opengl-diamond

./: diamond.frag  diamond.vs  main.py  pyproject.toml  readme.md
